Solve "Valid Anagram"

--- a/lib/coding_challenges/exercise_template.rb.erb
+++ b/lib/coding_challenges/exercise_template.rb.erb
@@ -1,6 +1,6 @@
 module CodingChallenges
   class <%= ENV["EXERCISE_CLASS_NAME"] %>
-    def <%= ENV["EXERCISE_MAIN_METHOD"] %>(nums)
+    def <%= ENV["EXERCISE_MAIN_METHOD"] %>
 
     end
   end
