Solve "Product of Array Except Self"

--- a/spec/exercise_spec_template.rb.erb
+++ b/spec/exercise_spec_template.rb.erb
@@ -4,7 +4,7 @@ RSpec.describe CodingChallenges::<%= ENV["EXERCISE_CLASS_NAME"] %> do
   subject { CodingChallenges::<%= ENV["EXERCISE_CLASS_NAME"] %>.new }
 
   it "1" do
-    root = [1, 2, 3]
+    nums = [1, 2, 3]
 
     result = subject.<%= ENV["EXERCISE_MAIN_METHOD"] %>
 
